[package]
name = "qingwa"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.39", features = ["derive"] }
clearscreen = "4.0.1"
dotenv = "0.15.0"
futures-util = "0.3.31"
hex = "0.4.3"
hmac = "0.12.1"
qrcode = "0.14.1"
regex = "1.11.1"
reqwest = { version = "0.12.19", features = ["blocking", "json", "rustls-tls"] }
serde_json = "1.0.140"
sha1 = "0.10.6"
tokio = { version = "1.45.1", features = ["macros", "rt"] }
zbus = "5.7.1"
zvariant = "5.5.3"
